--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ modulo-2/entorno-virtual
 modulo-3/expresionPrueba.ipynb
 modulo-4/cadenasPrueba.ipynb
 modulo-5/operadoresPrueba.ipynb
+modulo-6/listasPrueba.ipynb
