--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ modulo-3/expresionPrueba.ipynb
 modulo-4/cadenasPrueba.ipynb
 modulo-5/operadoresPrueba.ipynb
 modulo-6/listasPrueba.ipynb
+modulo-7/ciclosPrueba.ipynb
