--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ modulo-4/cadenasPrueba.ipynb
 modulo-5/operadoresPrueba.ipynb
 modulo-6/listasPrueba.ipynb
 modulo-7/ciclosPrueba.ipynb
+modulo-8/dicionarioDatos_prueba.ipynb
