--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ modulo-5/operadoresPrueba.ipynb
 modulo-6/listasPrueba.ipynb
 modulo-7/ciclosPrueba.ipynb
 modulo-8/dicionarioDatos_prueba.ipynb
+modulo-9/funcionesEjemplo.ipynb
