--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ modulo-6/listasPrueba.ipynb
 modulo-7/ciclosPrueba.ipynb
 modulo-8/dicionarioDatos_prueba.ipynb
 modulo-9/funcionesEjemplo.ipynb
+modulo-10/modulo-10-Manejo-de-errores.md
